<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/eventsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_tab"
        android:title="@string/events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addEventFragment"
        android:enabled="true"
        android:icon="@drawable/ic_add_event_tab"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings_tab"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/archiveFragment"
        android:enabled="true"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />


</menu>